@@ -1,6 +1,7 @@
 2025-07-23 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Consider only live records in mapping utility, resolves #384
+    * Prevent upgrade wizard from crashing when cruser_id field has been removed, resolves #381
 
 2025-06-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
